<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".Login">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="150dp"
        android:layout_height="131dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <TextView
        android:id="@+id/access_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/poppins"
        android:text="@string/access_app"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLabel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/access_app">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/email"
            android:drawablePadding="16dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLabel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/emailLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:id="@+id/loginButton"
        android:textColor="#FFF"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_in"
        android:textSize="16sp"
        app:backgroundTint="#F8931E"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:onClick="goToLogon"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/log_on_access"
        android:textColor="#F8931E"
        android:textSize="16sp"
        app:backgroundTint="#00000000"
        app:cornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>